--- a/Padrões de Desenvolvimento de Software/Strategy/package.json
+++ b/Padrões de Desenvolvimento de Software/Strategy/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^20.9.0",
     "@types/readline-sync": "^1.4.7",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
     "typescript": "^5.2.2"
   }
